# project-atlas

./: .gitignore  Cargo.toml  README.md  avr-atmega1284p.json  makefile
.cargo/: config.toml
.github/workflows/: rust.yml
include/: commands.h  led.h
include/drivers/: led.h  sdcard.h  spidev.h
include/filesystem/: diskio.h  pff.h  pffconf.h
src/: commands.c  drivers.rs  led.c  main.c  main.rs
src/drivers/: lcd.rs  led.c  sdcard.c  spidev.c
src/filesystem/: diskio.c  pff.c
