[package]
name = "project-atlas"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
ufmt = "0.1.0"
avr-device = "0.5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.atmega-hal]
git = "https://github.com/Rahix/avr-hal"
rev = "3c02df9"
features = ["atmega1284p", "rt"]

[dependencies.hd44780-driver]
git = "https://github.com/JohnDoneth/hd44780-driver"
rev = "989f170"

[dependencies.avr-hal-generic]
git = "https://github.com/Rahix/avr-hal"
